--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,24 @@
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="css/main.css">
 
-  <script src="http://192.168.1.24:5000/socket.io/socket.io.js"></script>
+  <!--<script src="http://192.168.1.24:5000/socket.io/socket.io.js"></script>--> 
   <script src="js/map.js"></script>
   <script src="js/libs/core.js"></script>
+  <script src="js/libs/virtualjoystick.js"></script>
   <script src="js/libs/box2d.js"></script>
-  <script src="js/main.js"></script>
 </head>
 <body>
-  <header>
-
-  </header>
+  <!--
+  <header></header>
+  -->
   <div role="main">
+    <div id="joystick" class="joystick"></div>
+    <div class="buttons">
+      <a onclick="handle_button_a()" ontouchstart="handle_button_a()" class="button-a">A</a>
+      <a onclick="handle_button_b()" ontouchstart="handle_button_b()" class="button-b">B</a>
+      <a onclick="handle_button_c()" ontouchstart="handle_button_c()" class="button-c">C</a>
+    </div>
+    <!--<div id="joystick"></div>-->
 
     <div id="app"></div>
     <div class="canvas-container" style="width: 707px">
@@ -26,12 +33,15 @@
       <canvas id="app-canvas" width="707" height="742"></div>
     </div>
 
+    <div style="display:none">
     <div id="sec-home">
     <a href="#" onclick="game.new(); return false;" class="button-play">- play -</a>
     <a href="#" onclick="game.new(); return false;" class="button-controls">- controls -</a>
     <a href="#" onclick="game.new(); return false;" class="button-exit">- exit -</a>
     <a href="#" onclick="game.new(); return false;" class="button-credits">- credits -</a>
     </div>
+
+
 
     <a href="#" onclick="game.new(); return false;" class="action disabled">new</a>
     <br />
@@ -49,11 +59,14 @@
     <div id="log">
       <h1>Log:</h1>
     </div>
+    </div>
   </div>
-  <footer>
 
-  </footer>
+  <!--
+  <footer></footer>
+  -->
 
   <script src="js/libs/tiled.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
