--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>le caju</title>
+  <title>Caju</title>
   <meta name="description" content="">
 
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
@@ -11,8 +11,9 @@
   <!--<script src="http://192.168.1.24:5000/socket.io/socket.io.js"></script>--> 
   <script src="js/map.js"></script>
   <script src="js/libs/core.js"></script>
+   <script src="js/libs/easeljs.js"></script>
   <script src="js/libs/virtualjoystick.js"></script>
-  <script src="js/libs/box2d.js"></script>
+  <!--<script src="js/libs/box2d.js"></script>-->
 </head>
 <body>
   <!--
