--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,8 @@
   <!--<script src="http://192.168.1.24:5000/socket.io/socket.io.js"></script>--> 
   <script src="js/map.js"></script>
   <script src="js/libs/core.js"></script>
-   <script src="js/libs/easeljs.js"></script>
-  <script src="js/libs/virtualjoystick.js"></script>
-  <!--<script src="js/libs/box2d.js"></script>-->
+   <script src="js/libs/easel.js"></script>
+  <script src="js/libs/box2d.js"></script>
 </head>
 <body>
   <!--
@@ -31,7 +30,7 @@
     <div id="app"></div>
     <div class="canvas-container" style="width: 707px">
       <div class="cloud"></div>
-      <canvas id="app-canvas" width="707" height="742"></div>
+      <canvas id="app-canvas" width="707" height="742"></canvas>
     </div>
 
     <div style="display:none">
@@ -69,5 +68,6 @@
 
   <script src="js/libs/tiled.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/libs/virtualjoystick.js"></script>
 </body>
 </html>
