--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     </script>
 
     <script src="js/libs/easel.js"></script>
-    <script src="http://127.0.0.1:5000/socket.io/socket.io.js"></script>
+    <script src="http://192.168.1.21:5000/socket.io/socket.io.js"></script>
 
 </head>
 <body>
@@ -60,7 +60,7 @@
             <p>choose a world</p>
             <div class="img_container">
                 <img src="" width="200" height="160" onclick="game.new(this.getAttribute('data-url'))" data-url="map.json">
-                <img src="" width="200" height="160" onclick="game.new(this.getAttribute('data-url'))" data-url="map_01.json">
+                <img src="" width="200" height="160" onclick="game.new(this.getAttribute('data-url'))" data-url="map_03.json">
                 <img src="" width="200" height="160" onclick="game.new(this.getAttribute('data-url'))" data-url="map.json">
             </div>
             <a class="close ir" href="javascript:;" onclick="this.parentElement.removeClass('active')"></a>
@@ -81,8 +81,10 @@
     </section>
 
     <div id="joystick"></div>
+    <div id="webcam"></div>
 
 <script src="js/libs/joystick.js"></script>
+<script src="js/libs/gum.js"></script>
 <script>
 
 /**
@@ -281,7 +283,12 @@ window.Colider = Colider;
         , KEYCODE_RIGHT = 39
     ;
 
-    const DEBUG = true;
+    const DEBUG = false;
+    var LOADED = false;
+
+
+
+    var container = new Container();
 
     function handleKeyDown (e) {
 
@@ -320,13 +327,15 @@ window.Colider = Colider;
 
         xhr.onload = function(e) {
 
-            console.log('LOADED: xhr', xhr);
+            if(DEBUG) console.log('LOADED: xhr', xhr);
 
             map_points = JSON.parse(xhr.responseText);
 
             sw = map_points.tilewidth
             sh = map_points.tileheight
             sh_p = map_points.tilesets[0].tileheight
+
+            inner_points = map_points.layers;
 
             // INICIO carga mapa
             map = new Image();
@@ -384,18 +393,39 @@ window.Colider = Colider;
             if(other_player == 0) {
                 socket.emit('ready', instance);
             }
+
+            /*window.onresize = function () {
+                canvas.width = document.width;
+                canvas.height = document.height;
+                stage.clear();
+                reDraw();
+            }*/
         }
 
     }
 
+
+    function reDraw () {
+        var i=0;
+        for(;i<inner_points.length; i++) {
+
+            layer = inner_points[i];
+
+            // draw part of the map
+            if(layer.data) {
+                drawLayer(layer);
+            }
+        }
+    }
+
     function handleMapLoad () {
 
-        console.log('CALLED: handleMapLoad()', this, map_points);
+        if(DEBUG) console.log('CALLED: handleMapLoad()', this, map_points);
 
         var colider = null;
         var hitZones = [];
         var i=0;
-        var inner_points = map_points.layers;
+        //var inner_points = map_points.layers;
         var layer = null;
 
         // for players
@@ -514,6 +544,8 @@ window.Colider = Colider;
             if(arr[i] != 0) drawTile(left, top - floor, arr[i]-1)
         }
 
+
+        stage.addChild(container);
         stage.update();
     }
 
@@ -539,7 +571,9 @@ window.Colider = Colider;
         bmp.x = left;
         bmp.y = top;
 
-        stage.addChild(bmp);
+        //stage.addChild(bmp);
+
+        container.addChild(bmp);
     }
 
     function tick () {
@@ -589,7 +623,7 @@ window.Colider = Colider;
      * Socket
      ************************************/
 
-    socket = io.connect('http://localhost:5000', {
+    socket = io.connect('http://192.168.1.21:5000', {
         'reconnect': true
         , 'reconnection delay': 500
         , 'max reconnection attempts': 5
