--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+    <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -92,7 +92,7 @@
                     <li><a href="javascript:;" onclick="document.querySelector('.your_player').addClass('active')">your player</a></li>
                     <li><a href="javascript:;">options</a></li>-->
                     <li><a href="javascript:;" onclick="document.querySelector('.menu').addClass('hide');document.querySelector('.new_game').addClass('active')">new game</a></li>
-                    <li><a href="javascript:;" onclick="document.querySelector('.menu').addClass('hide')">join a game</a></li>
+                    <li><a href="javascript:;" onclick="document.querySelector('.menu').addClass('hide');document.querySelector('.join_game').addClass('active')">join a game</a></li>
                     <li><a href="javascript:;" onclick="document.querySelector('.menu').addClass('hide')">your player</a></li>
                     <li><a href="javascript:;" onclick="document.querySelector('.menu').addClass('hide')">options</a></li>
                 </ul>
@@ -112,12 +112,17 @@
             <img src="" class="deactive" width="200" height="160">    
         </div>
 
-        <div class="join_game popup">
+        <div class="join_game">
+            <input type="text" placeholder="game's id">
+            <a class="play" href="javascript:;" onclick="game.join(this.parentElement.querySelector('input').value)">play!</a>
+        </div>
+
+        <!--<div class="join_game popup">
             <h1>join a game</h1>
             <input type="text" placeholder="game's id">
             <a class="play" href="javascript:;" onclick="game.join(this.parentElement.querySelector('input').value)">play!</a>
             <a class="close ir" href="javascript:;" onclick="this.parentElement.removeClass('active')"></a>
-        </div>
+        </div>-->
 
         <!--<div class="new_game popup">
             <h1>new game</h1>
@@ -140,7 +145,7 @@
 
 
     <section class="game">
-        <canvas id="app" width="707" height="742"></canvas>
+        <canvas id="app" width="1024" height="600"></canvas>
         <div class="alert_waiting" style="display:none">
             <p>waiting your friend</p>
             <p>remember give him the id <span id="instanceId"></span></p>
@@ -457,8 +462,8 @@ window.Colider = Colider;
         if(DEBUG) console.log('CALL: init('+map_url+')');
 
         canvas = document.getElementById('app');
-        canvas.width = document.width;
-        canvas.height = document.height;
+        /*canvas.width = document.width;
+        canvas.height = document.height;*/
         stage = new Stage(canvas);
 
         var xhr = new XMLHttpRequest();
@@ -848,7 +853,7 @@ window.Colider = Colider;
             document.querySelector('.new_game').removeClass('active');
 
             setTimeout(function() {
-                document.querySelector('.intro').style.display = 'none';
+                //document.querySelector('.intro').style.display = 'none';
 
                 setTimeout(function() {
                     //show waiting
@@ -870,7 +875,7 @@ window.Colider = Colider;
             document.querySelector('.join_game').removeClass('active');
 
             setTimeout(function() {
-                document.querySelector('.intro').style.display = 'none';
+                //document.querySelector('.intro').style.display = 'none';
 
                 setTimeout(function() {
                     //show waiting
